<resources>
    <string name="app_name">bitirmeprojesi1</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="repassword">Şifreyi tekrar giriniz...</string>
    <string name="oldPassword">Eski Şifre</string>
    <string name="newPassword">Yeni Şifre</string>
    <string name="signin">Kayıt Ol</string>
    <string name="signUp"><u>Giriş Yap</u></string>
    <string name="adı">Adı</string>
    <string name="soyadı">Soyadı</string>

    <string name="update">Güncelle</string>
    <string name="sendAmessage"><u>Mesaj Gönder</u></string>
    <string name="confirmPasssword">Şifreyi Tekrarla</string>
    <string name="empty">lütfen tüm alanların girildiğinden emin olun</string>
    <string name="passwordConfirmProblem">Şifreleriniz birbirine uymuyor</string>
    <string name="reRegister">kullanıcı zaten kayıtlı</string>
    <string name="UserRegisrationMessage">Kayıt Başarılı</string>
    <string name="usernameOrPasswordInCorrect">Üzgünüm</string>
    <string name="DeleteMessagesQuestion">Mesajları silmek istiyor musun</string>
    <string name="DeleteMessageTag">Mesajı Sil</string>
    <string name="NotDeleted">Silme</string>
    <string name="checkPassword">Şifrenizi kontrol edin</string>
    <string name="updateInformation">Bilgileriniz güncellendi</string>
    <string name="tryAgain">Bir sorun oluştu. Lütfen daha sonra tekrar deneyin.</string>
    <string name="emptyListView">Mesaj listeniz boş</string>
</resources>