<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#a4b0be"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/etName"
            android:layout_width="372dp"
            android:layout_height="wrap_content"

            android:background="@drawable/back"
            android:drawableLeft="@drawable/woman"
            android:hint="@string/adı"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="372dp"
            android:layout_height="wrap_content"

            android:background="@drawable/back"
            android:drawableLeft="@drawable/woman"
            android:hint="@string/soyadı"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />


        <EditText
            android:id="@+id/etPass"
            android:layout_width="363dp"
            android:layout_height="67dp"


            android:background="@drawable/back"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />
        <EditText
            android:id="@+id/etPassConfirm"
            android:layout_width="363dp"
            android:layout_height="67dp"


            android:background="@drawable/back"
            android:drawableLeft="@drawable/password"
            android:hint="@string/repassword"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />



        <Button
            android:id="@+id/btnsignUp"
            android:layout_width="376dp"
            android:layout_height="93dp"

            android:layout_margin="4dp"
            android:textColor="#FFC107"


            android:background="@drawable/btnsignin"
            android:padding="10dp"
            android:text="@string/signin" />

    </LinearLayout>










</RelativeLayout>