<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#a4b0be"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Li1"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:drawableLeft="@drawable/woman"
            android:hint="@string/username"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />


        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:imeOptions="actionSend|flagNoEnterAction"
            android:padding="10dp"
            android:textColorHint="#FFC107" />

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="389dp"
            android:layout_height="65dp"

            android:layout_margin="4dp"


            android:background="@drawable/btnsignin"
            android:padding="10dp"
            android:text="@string/signin"
            android:textColor="#FFC107" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:textColor="#685005"
        android:layout_alignRight="@id/Li1"
        android:layout_below="@id/Li1"
        android:layout_marginRight="12dp"
        android:text="Kayıt Ol"/>






</RelativeLayout>